<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sample_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="-2sp"
        android:text="@string/sample_dialog_title"
        android:textColor="@color/colorTextBlack"
        android:textSize="18.7sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/sample_dialog_message"
        android:textColor="@color/sample_text_gray"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_terms"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_new_tab"
        android:drawablePadding="8dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sample_dialog_terms_title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/sample_orange"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:ignore="RtlCompat"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/btn_privacy"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:drawableStart="@drawable/ic_new_tab"
        android:drawablePadding="8dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sample_dialog_privacy_title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/sample_orange"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:ignore="RtlCompat"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sample_dialog_accept_btn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="9dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sample_dialog_cancel_btn"
        android:textAllCaps="false"
        android:textColor="@color/sample_gray"
        android:textSize="14sp"
        android:textStyle="normal"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>